--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,17 @@ input:hover, input:focus {
   }
 }
 
+.box {
+
+  position: relative;
+  height: : 100px;
+  padding: 100px;
+  background: rgba(255,255,255,.2);
+  box-shadow: 0 5px 15px rgba(0,0,0,.5)
+  background-size: 150px;
+}
+
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   /* line 29, ../../01 cl html template/New folder/May 2019/174 Ariclaw Lawyer/Ariclaw Lawyer Html/sass/_common.scss */
   .section_padding {
@@ -2548,6 +2559,10 @@ ul {
   }
 }
 
+
+
+
+
 /* line 56, ../../01 cl html template/New folder/May 2019/174 Ariclaw Lawyer/Ariclaw Lawyer Html/sass/_banner.scss */
 .banner_part .banner_text {
   display: table;
@@ -2560,6 +2575,7 @@ ul {
 .banner_part .banner_text .banner_text_iner {
   display: table-cell;
   vertical-align: middle;
+
 }
 
 @media (max-width: 575px) {
@@ -2609,7 +2625,7 @@ ul {
   font-weight: 400;
   margin-bottom: 27px;
   line-height: 1.273;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-top: 34px;
 }
 
@@ -2625,7 +2641,7 @@ ul {
 @media only screen and (min-width: 576px) and (max-width: 767px) {
   /* line 89, ../../01 cl html template/New folder/May 2019/174 Ariclaw Lawyer/Ariclaw Lawyer Html/sass/_banner.scss */
   .banner_part .banner_text h1 {
-    font-size: 40px;
+    font-size: 26px;
     margin-bottom: 15px;
     line-height: 1.3;
   }
@@ -2645,7 +2661,7 @@ ul {
   .banner_part .banner_text h1 {
     font-size: 40px;
     margin-bottom: 15px;
-    line-height: 1.4;
+    line-height: 1.3;
   }
 }
 
